# TGBOT-i_saidru

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_user_subscription.py  0003_payment_yookassa_prep.py  0004_payment_kind_nullable_document.py
app/: __init__.py  main.py
app/bot/: keyboards.py  reply_markup_safe.py  router.py  states.py
app/bot/handlers/: admin.py  common.py  consultation.py  documents.py  history.py  telegram_payments.py
app/core/: config.py  constants.py  doc_filename.py  telegram_text.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/http/: yookassa_webhook.py
app/integrations/: __init__.py
app/integrations/yookassa/: __init__.py  client.py  schemas.py  webhook_security.py
app/schemas/: ai.py
app/services/: catalog.py  deepseek.py  documents.py  payment_effects.py  payments.py  pdf.py  telegram_invoice_finalize.py  telegram_invoice_payload.py  yookassa_finalize.py
deploy/systemd/: tgbot-isaidru.service
docs/: PAYMENTS_TELEGRAM.md
scripts/: bootstrap_templates.py  test_gen.py
templates/business/freelance_contract/: metadata.json
templates/business/notice/: metadata.json
templates/claims/claim_insurance/: metadata.json
templates/claims/consumer_refund_claim/: metadata.json
tests/: test_catalog.py  test_config.py  test_deepseek.py  test_documents.py  test_payment_service.py  test_telegram_invoice_payload.py  test_telegram_text.py  test_yoo_webhook_parse.py  test_yookassa_telegram_extras.py  test_yookassa_webhook.py
(+15 files in other folders)
