[project]
name = "my-documents-bot"
version = "0.1.0"
description = "Telegram bot 'Мои документы' with AI legal consultations and template-based document generation."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.20.0",
    "aiohttp-socks>=0.8.0",
    "alembic>=1.17.0",
    "asyncpg>=0.31.0",
    "docxtpl>=0.20.0",
    "httpx[socks]>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-docx>=1.2.0",
    "redis>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "storage*", "templates*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
